<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/toolbar_layout" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/about_margin_top">

                <ImageView
                    android:layout_width="@dimen/about_big_icon_size"
                    android:layout_height="@dimen/about_big_icon_size"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_mm" />

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="bottom|end"-->
                    <!--android:src="@mipmap/ic_logo_kg" />-->
            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_margin_top"
                android:orientation="vertical">

                <TextView
                    style="@style/textBigBlackHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/about_margin_start_end"
                    android:text="@string/about_team_edition"/>

                <TextView
                    style="@style/textNormalGrey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/about_margin_start_end"
                    android:layout_marginStart="@dimen/about_margin_start_end"
                    android:layout_marginTop="@dimen/about_margin_top_small"
                    android:text="@string/about_long_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/about_margin_start_end"
                    android:layout_marginStart="@dimen/about_margin_start_end"
                    android:layout_marginTop="@dimen/about_margin_top_normal"
                    android:text="@string/about_version"
                    style="@style/textBigBlackBold"/>

                <TextView
                    style="@style/linkSmallNormalBlack"
                    android:id="@+id/text_view_mattermost_org"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/about_margin_start_end"
                    android:layout_marginStart="@dimen/about_margin_start_end"
                    android:layout_marginTop="@dimen/about_margin_top_normal"
                    android:text="@string/about_mattermost_org"
                    android:autoLink="web"/>

                <TextView
                    style="@style/linkSmallNormalBlack"
                    android:id="@+id/text_view_kilograpp_team"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/about_margin_start_end"
                    android:layout_marginStart="@dimen/about_margin_start_end"
                    android:layout_marginTop="@dimen/about_margin_top_small"
                    android:text="@string/about_kilograpp"/>

                <TextView
                    style="@style/textNormalGrey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/about_margin_bottom_small"
                    android:layout_marginEnd="@dimen/about_margin_start_end"
                    android:layout_marginStart="@dimen/about_margin_start_end"
                    android:layout_marginTop="@dimen/about_margin_top_big"
                    android:text="@string/about_copyright"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>