<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_activity_grey"
            android:orientation="vertical">

            <TextView
                style="@style/textGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_start"
                android:text="@string/mob_push_title_send" />

            <android.support.v7.widget.CardView
                android:id="@+id/all"
                style="@style/CardView.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="all push"
                android:layout_marginTop="@dimen/activity_vertical_text_margin">

                <TextView
                    style="@style/textLargeBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/mob_push_all" />

                <ImageView
                    android:id="@+id/selectAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_check_24dp"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/mention"
                style="@style/CardView.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="mention push"
                android:layout_marginTop="@dimen/cardview_compat_inset_shadow">

                <TextView
                    style="@style/textLargeBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/mob_push_mentions_direct" />

                <ImageView
                    android:id="@+id/selectMentionsDirect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_check_24dp"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/none"
                style="@style/CardView.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="none push"
                android:layout_marginTop="@dimen/cardview_compat_inset_shadow">

                <TextView
                    style="@style/textLargeBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/mob_push_never" />

                <ImageView
                    android:id="@+id/selectNever"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_check_24dp"/>

            </android.support.v7.widget.CardView>

            <TextView
                style="@style/textGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/mob_push_description_send" />


            <TextView
                style="@style/textGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_start"
                android:text="@string/mob_push_title_trigger" />

            <android.support.v7.widget.CardView
                android:id="@+id/online"
                style="@style/CardView.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="online push_status"
                android:layout_marginTop="@dimen/activity_vertical_text_margin">

                <TextView
                    style="@style/textLargeBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/mob_push_on_away_off" />

                <ImageView
                    android:id="@+id/selectAllTriger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_check_24dp"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/away"
                style="@style/CardView.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="away push_status"
                android:layout_marginTop="@dimen/cardview_compat_inset_shadow">

                <TextView
                    style="@style/textLargeBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/mob_push_away_off" />

                <ImageView
                    android:id="@+id/selectAwayOff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_check_24dp"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/offline"
                style="@style/CardView.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="offline push_status"
                android:layout_marginTop="@dimen/cardview_compat_inset_shadow">

                <TextView
                    style="@style/textLargeBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/mob_push_off" />

                <ImageView
                    android:id="@+id/selectOff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_check_24dp"/>

            </android.support.v7.widget.CardView>

            <TextView
                style="@style/textGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/mob_push_description_trigger" />


        </LinearLayout>
    </ScrollView>
</layout>