<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.authorization.MainActivity">
        <include layout="@layout/toolbar_layout"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_marginTop="50dp"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:hint="@string/forgot_password_hint_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/HintTextStyle"
                        app:hintEnabled="true"
                        app:hintAnimationEnabled="true">

                        <EditText
                            android:id="@+id/editEmail"
                            style="@style/DiscriptionBlackTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="textEmailAddress" />

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        style="@style/HintTextStyle"
                        android:text="@string/forgot_password_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                    android:id="@+id/progressBar"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    app:mpb_progressStyle="circular" />

                <Button
                    android:id="@+id/buttonRecovery"
                    android:stateListAnimator="@null"
                    android:background="@drawable/touch_selector"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/forgot_password_recovery_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </ScrollView>
       </LinearLayout>
</layout>